[package]
name = "leafrender"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]
edition = "2018"
description = "A simple 2D rendering + input library for your platform."

[dependencies]
# Shared
rusttype = "0.7.2"
image = "0.20.0"

# Raspberry Pi
egl = { version = "0.2.7", optional = true }
opengles = { git = "https://github.com/seankerr/rust-opengles", rev = "9a139bc", optional = true }
videocore = { version = "0.1.3", optional = true }
evdev = { version = "0.10.1", optional = true }

# Glutin
glutin = { version = "0.18.0", optional = true }
gl = { version = "0.7.0", optional = true }

libc = "0.1"

[features]
raspberry_pi = ["egl", "opengles", "videocore", "evdev"]
desktop_gl = ["glutin", "gl"]
