[package]
name = "leafrender"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]
edition = "2018"
description = "LeafRender is a simply, easy to use library to just get pixels onto the screen, regardless of your platform."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/j-selby/leafrender"

[dependencies]
# Shared
rusttype = "0.7.6"
image = "0.21"

# Raspberry Pi
egl = { version = "0.2.7", optional = true }
opengles = { version = "0.1.2", optional = true }
videocore = { version = "0.1.3", optional = true }
evdev = { version = "0.10.1", optional = true }

# Glutin
glutin = { version = "0.21.0", optional = true }
gl = { version = "0.12.0", optional = true }

libc = "0.1"

[features]
raspberry_pi = ["egl", "opengles", "videocore", "evdev"]
desktop_gl = ["glutin", "gl"]

default = ["desktop_gl"]
